[gd_scene load_steps=3 format=2]

[ext_resource path="res://dev_tools/AttackCreator.gd" type="Script" id=1]
[ext_resource path="res://dev_tools/weapon.gd" type="Script" id=2]

[node name="AttackCreator" type="Node2D"]
script = ExtResource( 1 )

[node name="weapon" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 814.273, 455.253 )
rotation = -0.846463
script = ExtResource( 2 )

[node name="fire_rate" type="Timer" parent="weapon"]
one_shot = true

[node name="ScrollContainer" type="ScrollContainer" parent="."]
editor/display_folded = true
margin_left = 7.0
margin_top = 6.0
margin_right = 488.0
margin_bottom = 492.0
scroll_horizontal_enabled = false

[node name="SettingsContainer" type="HBoxContainer" parent="ScrollContainer"]
editor/display_folded = true
margin_right = 474.0
margin_bottom = 904.0

[node name="Sliders" type="VBoxContainer" parent="ScrollContainer/SettingsContainer"]
editor/display_folded = true
margin_right = 179.0
margin_bottom = 904.0
size_flags_horizontal = 3
custom_constants/separation = 11

[node name="MinDamage" type="HSlider" parent="ScrollContainer/SettingsContainer/Sliders"]
margin_right = 179.0
margin_bottom = 16.0
max_value = 500.0
value = 1.0
ticks_on_borders = true

[node name="MaxDamage" type="HSlider" parent="ScrollContainer/SettingsContainer/Sliders"]
margin_top = 27.0
margin_right = 179.0
margin_bottom = 43.0
max_value = 500.0
value = 1.0
ticks_on_borders = true

[node name="PLACEHOLDER" type="HSlider" parent="ScrollContainer/SettingsContainer/Sliders"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 54.0
margin_right = 179.0
margin_bottom = 70.0
ticks_on_borders = true

[node name="MinFireRate" type="HSlider" parent="ScrollContainer/SettingsContainer/Sliders"]
margin_top = 81.0
margin_right = 179.0
margin_bottom = 97.0
min_value = 0.1
max_value = 15.0
step = 0.1
value = 1.0
ticks_on_borders = true

[node name="MaxFireRate" type="HSlider" parent="ScrollContainer/SettingsContainer/Sliders"]
margin_top = 108.0
margin_right = 179.0
margin_bottom = 124.0
min_value = 0.1
max_value = 15.0
step = 0.1
value = 1.0
ticks_on_borders = true

[node name="PLACEHOLDER2" type="HSlider" parent="ScrollContainer/SettingsContainer/Sliders"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 135.0
margin_right = 179.0
margin_bottom = 151.0
ticks_on_borders = true

[node name="MinBullets" type="HSlider" parent="ScrollContainer/SettingsContainer/Sliders"]
margin_top = 162.0
margin_right = 179.0
margin_bottom = 178.0
max_value = 15.0
value = 1.0
ticks_on_borders = true

[node name="MaxBullets" type="HSlider" parent="ScrollContainer/SettingsContainer/Sliders"]
margin_top = 189.0
margin_right = 179.0
margin_bottom = 205.0
max_value = 15.0
value = 1.0
ticks_on_borders = true

[node name="PLACEHOLDER4" type="HSlider" parent="ScrollContainer/SettingsContainer/Sliders"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 216.0
margin_right = 179.0
margin_bottom = 232.0
ticks_on_borders = true

[node name="BulletSpread" type="HSlider" parent="ScrollContainer/SettingsContainer/Sliders"]
margin_top = 243.0
margin_right = 179.0
margin_bottom = 259.0
max_value = 360.0
ticks_on_borders = true

[node name="BulletSpreadRandom" type="HSlider" parent="ScrollContainer/SettingsContainer/Sliders"]
margin_top = 270.0
margin_right = 179.0
margin_bottom = 286.0
max_value = 360.0
ticks_on_borders = true

[node name="PLACEHOLDER3" type="HSlider" parent="ScrollContainer/SettingsContainer/Sliders"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 297.0
margin_right = 179.0
margin_bottom = 313.0
ticks_on_borders = true

[node name="MinSpeed" type="HSlider" parent="ScrollContainer/SettingsContainer/Sliders"]
margin_top = 324.0
margin_right = 179.0
margin_bottom = 340.0
min_value = 10.0
max_value = 1000.0
step = 10.0
value = 300.0
ticks_on_borders = true

[node name="MaxSpeed" type="HSlider" parent="ScrollContainer/SettingsContainer/Sliders"]
margin_top = 351.0
margin_right = 179.0
margin_bottom = 367.0
min_value = 10.0
max_value = 1000.0
step = 10.0
value = 300.0
ticks_on_borders = true

[node name="MinRange" type="HSlider" parent="ScrollContainer/SettingsContainer/Sliders"]
margin_top = 378.0
margin_right = 179.0
margin_bottom = 394.0
min_value = 10.0
max_value = 1000.0
step = 10.0
value = 200.0
ticks_on_borders = true

[node name="MaxRange" type="HSlider" parent="ScrollContainer/SettingsContainer/Sliders"]
margin_top = 405.0
margin_right = 179.0
margin_bottom = 421.0
min_value = 10.0
max_value = 1000.0
step = 10.0
value = 200.0
ticks_on_borders = true

[node name="PLACEHOLDER6" type="HSlider" parent="ScrollContainer/SettingsContainer/Sliders"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 432.0
margin_right = 179.0
margin_bottom = 448.0
ticks_on_borders = true

[node name="MinPierces" type="HSlider" parent="ScrollContainer/SettingsContainer/Sliders"]
margin_top = 459.0
margin_right = 179.0
margin_bottom = 475.0
max_value = 50.0

[node name="MaxPierces" type="HSlider" parent="ScrollContainer/SettingsContainer/Sliders"]
margin_top = 486.0
margin_right = 179.0
margin_bottom = 502.0
max_value = 50.0

[node name="MinKnockback" type="HSlider" parent="ScrollContainer/SettingsContainer/Sliders"]
margin_top = 513.0
margin_right = 179.0
margin_bottom = 529.0
min_value = -300.0
max_value = 300.0

[node name="MaxKnockback" type="HSlider" parent="ScrollContainer/SettingsContainer/Sliders"]
margin_top = 540.0
margin_right = 179.0
margin_bottom = 556.0
min_value = -300.0
max_value = 300.0

[node name="PLACEHOLDER5" type="HSlider" parent="ScrollContainer/SettingsContainer/Sliders"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 567.0
margin_right = 179.0
margin_bottom = 583.0
ticks_on_borders = true

[node name="MinScale" type="HSlider" parent="ScrollContainer/SettingsContainer/Sliders"]
margin_top = 594.0
margin_right = 179.0
margin_bottom = 610.0
min_value = 0.5
max_value = 15.0
step = 0.25
value = 3.0
ticks_on_borders = true

[node name="MaxScale" type="HSlider" parent="ScrollContainer/SettingsContainer/Sliders"]
margin_top = 621.0
margin_right = 179.0
margin_bottom = 637.0
min_value = 0.5
max_value = 15.0
step = 0.25
value = 3.0
ticks_on_borders = true

[node name="SliderBulletRotation" type="HSlider" parent="ScrollContainer/SettingsContainer/Sliders"]
margin_top = 648.0
margin_right = 179.0
margin_bottom = 664.0
min_value = -1000.0
max_value = 1000.0
step = 10.0

[node name="PLACEHOLDER7" type="HSlider" parent="ScrollContainer/SettingsContainer/Sliders"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 675.0
margin_right = 179.0
margin_bottom = 691.0
ticks_on_borders = true

[node name="SliderBulletType" type="HSlider" parent="ScrollContainer/SettingsContainer/Sliders"]
margin_top = 702.0
margin_right = 179.0
margin_bottom = 718.0
max_value = 6.0
ticks_on_borders = true

[node name="BulletColor" type="ColorPickerButton" parent="ScrollContainer/SettingsContainer/Sliders"]
margin_top = 729.0
margin_right = 179.0
margin_bottom = 749.0
color = Color( 1, 1, 1, 1 )

[node name="BackgroundColor" type="ColorPickerButton" parent="ScrollContainer/SettingsContainer/Sliders"]
margin_top = 760.0
margin_right = 179.0
margin_bottom = 780.0

[node name="PLACEHOLDER8" type="HSlider" parent="ScrollContainer/SettingsContainer/Sliders"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 791.0
margin_right = 179.0
margin_bottom = 807.0
ticks_on_borders = true

[node name="HeavyAttack" type="CheckBox" parent="ScrollContainer/SettingsContainer/Sliders"]
margin_top = 818.0
margin_right = 179.0
margin_bottom = 842.0
text = "Heavy attack"

[node name="SoundAttack" type="OptionButton" parent="ScrollContainer/SettingsContainer/Sliders"]
margin_top = 853.0
margin_right = 179.0
margin_bottom = 873.0
text = "Choose attack sound"

[node name="SoundImpact" type="OptionButton" parent="ScrollContainer/SettingsContainer/Sliders"]
margin_top = 884.0
margin_right = 179.0
margin_bottom = 904.0
text = "Choose impact sound"

[node name="Values" type="VBoxContainer" parent="ScrollContainer/SettingsContainer"]
editor/display_folded = true
margin_left = 183.0
margin_right = 241.0
margin_bottom = 904.0
rect_min_size = Vector2( 36, 0 )
custom_constants/separation = 0

[node name="MinDamage" type="LineEdit" parent="ScrollContainer/SettingsContainer/Values"]
margin_right = 58.0
margin_bottom = 24.0
text = "1"
align = 1

[node name="MaxDamage" type="LineEdit" parent="ScrollContainer/SettingsContainer/Values"]
margin_top = 24.0
margin_right = 58.0
margin_bottom = 48.0
text = "1"
align = 1

[node name="PLACEHOLDER" type="Label" parent="ScrollContainer/SettingsContainer/Values"]
margin_top = 48.0
margin_right = 58.0
margin_bottom = 79.0
text = "
"

[node name="MinFireRate" type="LineEdit" parent="ScrollContainer/SettingsContainer/Values"]
margin_top = 79.0
margin_right = 58.0
margin_bottom = 103.0
text = "1"
align = 1

[node name="MaxFireRate" type="LineEdit" parent="ScrollContainer/SettingsContainer/Values"]
margin_top = 103.0
margin_right = 58.0
margin_bottom = 127.0
text = "1"
align = 1

[node name="PLACEHOLDER2" type="Label" parent="ScrollContainer/SettingsContainer/Values"]
margin_top = 127.0
margin_right = 58.0
margin_bottom = 158.0
text = "
"

[node name="MinBullets" type="LineEdit" parent="ScrollContainer/SettingsContainer/Values"]
margin_top = 158.0
margin_right = 58.0
margin_bottom = 182.0
text = "1"
align = 1

[node name="MaxBullets" type="LineEdit" parent="ScrollContainer/SettingsContainer/Values"]
margin_top = 182.0
margin_right = 58.0
margin_bottom = 206.0
text = "1"
align = 1

[node name="PLACEHOLDER4" type="Label" parent="ScrollContainer/SettingsContainer/Values"]
margin_top = 206.0
margin_right = 58.0
margin_bottom = 237.0
text = "
"

[node name="BulletSpread" type="LineEdit" parent="ScrollContainer/SettingsContainer/Values"]
margin_top = 237.0
margin_right = 58.0
margin_bottom = 261.0
text = "0"
align = 1

[node name="BulletSpreadRandom" type="LineEdit" parent="ScrollContainer/SettingsContainer/Values"]
margin_top = 261.0
margin_right = 58.0
margin_bottom = 285.0
text = "0"
align = 1

[node name="PLACEHOLDER3" type="Label" parent="ScrollContainer/SettingsContainer/Values"]
margin_top = 285.0
margin_right = 58.0
margin_bottom = 316.0
text = "
"

[node name="MinSpeed" type="LineEdit" parent="ScrollContainer/SettingsContainer/Values"]
margin_top = 316.0
margin_right = 58.0
margin_bottom = 340.0
text = "300"
align = 1

[node name="MaxSpeed" type="LineEdit" parent="ScrollContainer/SettingsContainer/Values"]
margin_top = 340.0
margin_right = 58.0
margin_bottom = 364.0
text = "300"
align = 1

[node name="PLACEHOLDER8" type="Label" parent="ScrollContainer/SettingsContainer/Values"]
margin_top = 364.0
margin_right = 58.0
margin_bottom = 378.0

[node name="MinRange" type="LineEdit" parent="ScrollContainer/SettingsContainer/Values"]
margin_top = 378.0
margin_right = 58.0
margin_bottom = 402.0
text = "200"
align = 1

[node name="MaxRange" type="LineEdit" parent="ScrollContainer/SettingsContainer/Values"]
margin_top = 402.0
margin_right = 58.0
margin_bottom = 426.0
text = "200"
align = 1

[node name="PLACEHOLDER6" type="Label" parent="ScrollContainer/SettingsContainer/Values"]
margin_top = 426.0
margin_right = 58.0
margin_bottom = 457.0
text = "
"

[node name="MinPierces" type="LineEdit" parent="ScrollContainer/SettingsContainer/Values"]
margin_top = 457.0
margin_right = 58.0
margin_bottom = 481.0
text = "0"
align = 1

[node name="MaxPierces" type="LineEdit" parent="ScrollContainer/SettingsContainer/Values"]
margin_top = 481.0
margin_right = 58.0
margin_bottom = 505.0
text = "0"
align = 1

[node name="MinKnockback" type="LineEdit" parent="ScrollContainer/SettingsContainer/Values"]
margin_top = 505.0
margin_right = 58.0
margin_bottom = 529.0
text = "0"
align = 1

[node name="MaxKnockback" type="LineEdit" parent="ScrollContainer/SettingsContainer/Values"]
margin_top = 529.0
margin_right = 58.0
margin_bottom = 553.0
text = "0"
align = 1

[node name="PLACEHOLDER5" type="Label" parent="ScrollContainer/SettingsContainer/Values"]
margin_top = 553.0
margin_right = 58.0
margin_bottom = 584.0
text = "
"

[node name="MinScale" type="LineEdit" parent="ScrollContainer/SettingsContainer/Values"]
margin_top = 584.0
margin_right = 58.0
margin_bottom = 608.0
text = "3"
align = 1

[node name="MaxScale" type="LineEdit" parent="ScrollContainer/SettingsContainer/Values"]
margin_top = 608.0
margin_right = 58.0
margin_bottom = 632.0
text = "3"
align = 1

[node name="PLACEHOLDER9" type="Label" parent="ScrollContainer/SettingsContainer/Values"]
margin_top = 632.0
margin_right = 58.0
margin_bottom = 646.0

[node name="Rotation" type="LineEdit" parent="ScrollContainer/SettingsContainer/Values"]
margin_top = 646.0
margin_right = 58.0
margin_bottom = 670.0
text = "0"
align = 1

[node name="PLACEHOLDER7" type="Label" parent="ScrollContainer/SettingsContainer/Values"]
margin_top = 670.0
margin_right = 58.0
margin_bottom = 701.0
text = "
"

[node name="Type" type="LineEdit" parent="ScrollContainer/SettingsContainer/Values"]
margin_top = 701.0
margin_right = 58.0
margin_bottom = 725.0
text = "0"
align = 1

[node name="Descriptions" type="VBoxContainer" parent="ScrollContainer/SettingsContainer"]
editor/display_folded = true
margin_left = 245.0
margin_right = 474.0
margin_bottom = 904.0
size_flags_horizontal = 3
custom_constants/separation = 13

[node name="DescDamage" type="Label" parent="ScrollContainer/SettingsContainer/Descriptions"]
margin_right = 229.0
margin_bottom = 14.0
text = "minimum damage."

[node name="DescBonusDamageHigh" type="Label" parent="ScrollContainer/SettingsContainer/Descriptions"]
margin_top = 27.0
margin_right = 229.0
margin_bottom = 41.0
text = "maximum damage."

[node name="PLACEHOLDER" type="Label" parent="ScrollContainer/SettingsContainer/Descriptions"]
margin_top = 54.0
margin_right = 229.0
margin_bottom = 68.0

[node name="DescFireRate" type="Label" parent="ScrollContainer/SettingsContainer/Descriptions"]
margin_top = 81.0
margin_right = 229.0
margin_bottom = 95.0
text = "minimum attacks per second "

[node name="DescFireRateRandom" type="Label" parent="ScrollContainer/SettingsContainer/Descriptions"]
margin_top = 108.0
margin_right = 229.0
margin_bottom = 122.0
text = "maximum attacks per second"

[node name="PLACEHOLDER2" type="Label" parent="ScrollContainer/SettingsContainer/Descriptions"]
margin_top = 135.0
margin_right = 229.0
margin_bottom = 149.0

[node name="DescBulletCount" type="Label" parent="ScrollContainer/SettingsContainer/Descriptions"]
margin_top = 162.0
margin_right = 229.0
margin_bottom = 176.0
text = "minimum bullets per attack."

[node name="DescBulletRandomHigh" type="Label" parent="ScrollContainer/SettingsContainer/Descriptions"]
margin_top = 189.0
margin_right = 229.0
margin_bottom = 203.0
text = "maximum bullets per attack."

[node name="PLACEHOLDER4" type="Label" parent="ScrollContainer/SettingsContainer/Descriptions"]
margin_top = 216.0
margin_right = 229.0
margin_bottom = 230.0

[node name="DescBulletSpread" type="Label" parent="ScrollContainer/SettingsContainer/Descriptions"]
margin_top = 243.0
margin_right = 229.0
margin_bottom = 257.0
text = "degree scatter angle per attack."

[node name="DescBulletSpreadRandom" type="Label" parent="ScrollContainer/SettingsContainer/Descriptions"]
margin_top = 270.0
margin_right = 229.0
margin_bottom = 284.0
text = "degree random angle per projectile."

[node name="PLACEHOLDER3" type="Label" parent="ScrollContainer/SettingsContainer/Descriptions"]
margin_top = 297.0
margin_right = 229.0
margin_bottom = 311.0

[node name="DescBulletSpeed" type="Label" parent="ScrollContainer/SettingsContainer/Descriptions"]
margin_top = 324.0
margin_right = 229.0
margin_bottom = 338.0
text = "minimum bullet speed pixels/sec"

[node name="DescBulletSpeedRandom" type="Label" parent="ScrollContainer/SettingsContainer/Descriptions"]
margin_top = 351.0
margin_right = 229.0
margin_bottom = 365.0
text = "maximum bullet speed pixels/sec"

[node name="DescBulletRange" type="Label" parent="ScrollContainer/SettingsContainer/Descriptions"]
margin_top = 378.0
margin_right = 229.0
margin_bottom = 392.0
text = "minimum range"

[node name="DescBulletRangeRandom" type="Label" parent="ScrollContainer/SettingsContainer/Descriptions"]
margin_top = 405.0
margin_right = 229.0
margin_bottom = 419.0
text = "maximum range"

[node name="PLACEHOLDER6" type="Label" parent="ScrollContainer/SettingsContainer/Descriptions"]
margin_top = 432.0
margin_right = 229.0
margin_bottom = 446.0

[node name="DescPierce" type="Label" parent="ScrollContainer/SettingsContainer/Descriptions"]
margin_top = 459.0
margin_right = 229.0
margin_bottom = 473.0
text = "minimum pierces"

[node name="ValuePierceRandomHigh" type="Label" parent="ScrollContainer/SettingsContainer/Descriptions"]
margin_top = 486.0
margin_right = 229.0
margin_bottom = 500.0
text = "maximum pierces"

[node name="DescKnockback" type="Label" parent="ScrollContainer/SettingsContainer/Descriptions"]
margin_top = 513.0
margin_right = 229.0
margin_bottom = 527.0
text = "minimum knockback"

[node name="DescKnockbackRandom" type="Label" parent="ScrollContainer/SettingsContainer/Descriptions"]
margin_top = 540.0
margin_right = 229.0
margin_bottom = 554.0
text = "maximum knockback"

[node name="PLACEHOLDER5" type="Label" parent="ScrollContainer/SettingsContainer/Descriptions"]
margin_top = 567.0
margin_right = 229.0
margin_bottom = 581.0

[node name="DescBulletScale" type="Label" parent="ScrollContainer/SettingsContainer/Descriptions"]
margin_top = 594.0
margin_right = 229.0
margin_bottom = 608.0
text = "minimum bullet size"

[node name="DescBulletScaleRandom" type="Label" parent="ScrollContainer/SettingsContainer/Descriptions"]
margin_top = 621.0
margin_right = 229.0
margin_bottom = 635.0
text = "maximum bullet size"

[node name="DescBulletRotation" type="Label" parent="ScrollContainer/SettingsContainer/Descriptions"]
margin_top = 648.0
margin_right = 229.0
margin_bottom = 662.0
text = "degree/sec projectile rotation."

[node name="PLACEHOLDER7" type="Label" parent="ScrollContainer/SettingsContainer/Descriptions"]
margin_top = 675.0
margin_right = 229.0
margin_bottom = 689.0

[node name="DescBulletType" type="Label" parent="ScrollContainer/SettingsContainer/Descriptions"]
margin_top = 702.0
margin_right = 229.0
margin_bottom = 716.0
text = "bullet type."

[node name="DescBulletColor" type="Label" parent="ScrollContainer/SettingsContainer/Descriptions"]
margin_top = 729.0
margin_right = 229.0
margin_bottom = 743.0
text = "bullet color."

[node name="DescBackgroundColor" type="Label" parent="ScrollContainer/SettingsContainer/Descriptions"]
margin_top = 756.0
margin_right = 229.0
margin_bottom = 770.0
text = "background color."

[node name="VBoxContainer" type="VBoxContainer" parent="."]
editor/display_folded = true
margin_left = 8.08888
margin_top = 501.03
margin_right = 188.089
margin_bottom = 593.03

[node name="ButtonSaveWeapon" type="Button" parent="VBoxContainer"]
editor/display_folded = true
margin_right = 180.0
margin_bottom = 20.0
text = "Save attack pattern"

[node name="WeaponName" type="LineEdit" parent="VBoxContainer/ButtonSaveWeapon"]
visible = false
margin_left = 183.0
margin_top = -1.0
margin_right = 343.0
margin_bottom = 23.0
align = 1
placeholder_text = "weapon name"
placeholder_alpha = 0.1

[node name="ButtonConfirmSafe" type="Button" parent="VBoxContainer/ButtonSaveWeapon/WeaponName"]
margin_top = 25.0
margin_right = 159.0
margin_bottom = 46.0
text = "Confirm"

[node name="NoNameWarning" type="Label" parent="VBoxContainer/ButtonSaveWeapon/WeaponName/ButtonConfirmSafe"]
visible = false
self_modulate = Color( 1, 0, 0, 1 )
margin_top = 27.0
margin_right = 159.0
margin_bottom = 45.0
text = "ADD A NAME FIRST!"
align = 1

[node name="ButtonRestoreDefaults" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 180.0
margin_bottom = 44.0
text = "Restore defaults"

[node name="ButtonDeleteProjectiles" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 180.0
margin_bottom = 68.0
text = "Clear all projectiles"

[node name="Entities" type="YSort" parent="."]
editor/display_folded = true

[node name="projectiles" type="YSort" parent="Entities"]

[connection signal="timeout" from="weapon/fire_rate" to="weapon" method="_on_fire_rate_timeout"]
[connection signal="value_changed" from="ScrollContainer/SettingsContainer/Sliders/MinDamage" to="." method="_on_MinDamage_value_changed"]
[connection signal="value_changed" from="ScrollContainer/SettingsContainer/Sliders/MaxDamage" to="." method="_on_MaxDamage_value_changed"]
[connection signal="value_changed" from="ScrollContainer/SettingsContainer/Sliders/MinFireRate" to="." method="_on_MinFireRate_value_changed"]
[connection signal="value_changed" from="ScrollContainer/SettingsContainer/Sliders/MaxFireRate" to="." method="_on_MaxFireRate_value_changed"]
[connection signal="value_changed" from="ScrollContainer/SettingsContainer/Sliders/MinBullets" to="." method="_on_MinBullets_value_changed"]
[connection signal="value_changed" from="ScrollContainer/SettingsContainer/Sliders/MaxBullets" to="." method="_on_MaxBullets_value_changed"]
[connection signal="value_changed" from="ScrollContainer/SettingsContainer/Sliders/BulletSpread" to="." method="_on_BulletSpread_value_changed"]
[connection signal="value_changed" from="ScrollContainer/SettingsContainer/Sliders/BulletSpreadRandom" to="." method="_on_BulletSpreadRandom_value_changed"]
[connection signal="value_changed" from="ScrollContainer/SettingsContainer/Sliders/MinSpeed" to="." method="_on_MinSpeed_value_changed"]
[connection signal="value_changed" from="ScrollContainer/SettingsContainer/Sliders/MaxSpeed" to="." method="_on_MaxSpeed_value_changed"]
[connection signal="value_changed" from="ScrollContainer/SettingsContainer/Sliders/MinRange" to="." method="_on_MinRange_value_changed"]
[connection signal="value_changed" from="ScrollContainer/SettingsContainer/Sliders/MaxRange" to="." method="_on_MaxRange_value_changed"]
[connection signal="value_changed" from="ScrollContainer/SettingsContainer/Sliders/MinPierces" to="." method="_on_MinPierces_value_changed"]
[connection signal="value_changed" from="ScrollContainer/SettingsContainer/Sliders/MaxPierces" to="." method="_on_MaxPierces_value_changed"]
[connection signal="value_changed" from="ScrollContainer/SettingsContainer/Sliders/MinKnockback" to="." method="_on_MinKnockback_value_changed"]
[connection signal="value_changed" from="ScrollContainer/SettingsContainer/Sliders/MaxKnockback" to="." method="_on_MaxKnockback_value_changed"]
[connection signal="value_changed" from="ScrollContainer/SettingsContainer/Sliders/MinScale" to="." method="_on_MinScale_value_changed"]
[connection signal="value_changed" from="ScrollContainer/SettingsContainer/Sliders/MaxScale" to="." method="_on_MaxScale_value_changed"]
[connection signal="value_changed" from="ScrollContainer/SettingsContainer/Sliders/SliderBulletRotation" to="." method="_on_SliderBulletRotation_value_changed"]
[connection signal="value_changed" from="ScrollContainer/SettingsContainer/Sliders/SliderBulletType" to="." method="_on_SliderBulletType_value_changed"]
[connection signal="color_changed" from="ScrollContainer/SettingsContainer/Sliders/BulletColor" to="." method="_on_BulletColor_color_changed"]
[connection signal="color_changed" from="ScrollContainer/SettingsContainer/Sliders/BackgroundColor" to="." method="_on_BackgroundColor_color_changed"]
[connection signal="toggled" from="ScrollContainer/SettingsContainer/Sliders/HeavyAttack" to="." method="_on_CheckBoxHeavyAttack_toggled"]
[connection signal="item_selected" from="ScrollContainer/SettingsContainer/Sliders/SoundAttack" to="." method="_on_SoundAttack_item_selected"]
[connection signal="item_selected" from="ScrollContainer/SettingsContainer/Sliders/SoundImpact" to="." method="_on_SoundImpact_item_selected"]
[connection signal="text_changed" from="ScrollContainer/SettingsContainer/Values/MinDamage" to="." method="_on_MinDamage_text_changed"]
[connection signal="text_changed" from="ScrollContainer/SettingsContainer/Values/MaxDamage" to="." method="_on_MaxDamage_text_changed"]
[connection signal="text_changed" from="ScrollContainer/SettingsContainer/Values/MinFireRate" to="." method="_on_MinFireRate_text_changed"]
[connection signal="text_changed" from="ScrollContainer/SettingsContainer/Values/MaxFireRate" to="." method="_on_MaxFireRate_text_changed"]
[connection signal="text_changed" from="ScrollContainer/SettingsContainer/Values/MinBullets" to="." method="_on_MinBullets_text_changed"]
[connection signal="text_changed" from="ScrollContainer/SettingsContainer/Values/MaxBullets" to="." method="_on_MaxBullets_text_changed"]
[connection signal="text_changed" from="ScrollContainer/SettingsContainer/Values/BulletSpread" to="." method="_on_BulletSpread_text_changed"]
[connection signal="text_changed" from="ScrollContainer/SettingsContainer/Values/BulletSpreadRandom" to="." method="_on_BulletSpreadRandom_text_changed"]
[connection signal="text_changed" from="ScrollContainer/SettingsContainer/Values/MinSpeed" to="." method="_on_MinSpeed_text_changed"]
[connection signal="text_changed" from="ScrollContainer/SettingsContainer/Values/MaxSpeed" to="." method="_on_MaxSpeed_text_changed"]
[connection signal="text_changed" from="ScrollContainer/SettingsContainer/Values/MinRange" to="." method="_on_MinRange_text_changed"]
[connection signal="text_changed" from="ScrollContainer/SettingsContainer/Values/MaxRange" to="." method="_on_MaxRange_text_changed"]
[connection signal="text_changed" from="ScrollContainer/SettingsContainer/Values/MinPierces" to="." method="_on_MinPierces_text_changed"]
[connection signal="text_changed" from="ScrollContainer/SettingsContainer/Values/MaxPierces" to="." method="_on_MaxPierces_text_changed"]
[connection signal="text_changed" from="ScrollContainer/SettingsContainer/Values/MinKnockback" to="." method="_on_MinKnockback_text_changed"]
[connection signal="text_changed" from="ScrollContainer/SettingsContainer/Values/MaxKnockback" to="." method="_on_MaxKnockback_text_changed"]
[connection signal="text_changed" from="ScrollContainer/SettingsContainer/Values/MinScale" to="." method="_on_MinScale_text_changed"]
[connection signal="text_changed" from="ScrollContainer/SettingsContainer/Values/MaxScale" to="." method="_on_MaxScale_text_changed"]
[connection signal="text_changed" from="ScrollContainer/SettingsContainer/Values/Rotation" to="." method="_on_Rotation_text_changed"]
[connection signal="text_changed" from="ScrollContainer/SettingsContainer/Values/Type" to="." method="_on_Type_text_changed"]
[connection signal="pressed" from="VBoxContainer/ButtonSaveWeapon" to="." method="_on_ButtonSaveWeapon_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonSaveWeapon/WeaponName/ButtonConfirmSafe" to="." method="_on_ButtonConfirmSafe_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonRestoreDefaults" to="." method="_on_ButtonRestoreDefaults_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonDeleteProjectiles" to="." method="_on_ButtonDeleteProjectiles_pressed"]
